fix responsive layout on mobile & tablet

--- a/src/style.scss
+++ b/src/style.scss
@@ -27,6 +27,9 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  @include mqmax(large) {
+    font-size: 18px;
+  }
 }
 
 .container {
@@ -36,6 +39,7 @@ body {
   @include mqmax(large) {
     width: 100%;
     height: auto;
+    margin-top: 40px;
   }
 }
 
