--- a/src/style/_about.scss
+++ b/src/style/_about.scss
@@ -30,7 +30,7 @@
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.5);
     animation: container-scale 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
     @include mqmax(large) {
-      width: 60vw;
+      width: 65vw;
     }
 
     h2 {
