--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -25,7 +25,7 @@ $fontSecondary: "Cantarell", sans-serif;
 // Media querries
 $breakpoints: (
   small: 576px,
-  medium: 768px,
+  medium: 860px,
   large: 1440px,
 );
 @mixin mq($key) {
